remove dist folder and add to ignore

--- a/src/pages/Part7.html
+++ b/src/pages/Part7.html
@@ -17,8 +17,7 @@
             <div class="copy-block">
                 <p/>
                 Access token<br/>
-                <pre id="copy-text-7-1"><code>
-                </code></pre>
+                <pre id="copy-text-7-1"><code></code></pre>
                 <p/>
                 <button class="copy-btn" onclick="copyToClipboard('copy-text-7-1')">Copy</button>
                 <p/>
