--- a/src/pages/Part7.html
+++ b/src/pages/Part7.html
@@ -22,7 +22,7 @@
                 <button class="copy-btn" onclick="copyToClipboard('copy-text-7-1')">Copy</button>
                 <p/>
 Typically valid for 24 hours. You may check validity at jwt.io before using it.
-<br/>If value is empty, please complete <a target="_blank" href="https://c8-portal.makelabs.in/signin">Sign-In with Gmail account</a>. Visit <i>this page</i> after sign-in to access new token.
+<br/>If value is empty or undefined, please complete <a target="_blank" href="https://c8-portal.makelabs.in/signin">Sign-In with Gmail account</a>. Visit <i>this page</i> after sign-in to access new token.
             </div>
             <p/>
 
