changes to prereq. other minor enh

--- a/src/pages/Part1.html
+++ b/src/pages/Part1.html
@@ -56,9 +56,23 @@
                     <span aria-label="Opens in new tab" title="Opens in new tab">
                     <a target="_blank" href=https://www.youtube.com/watch?v=coaGBdUcKiw" rel="noopener noreferrer">Youtube: OpenSSL install on Windows<sup>&nbsp;↗️</sup></a>
                     </span>
+                </li>
+                <li>Git for Windows<br/>
+                    <span aria-label="Opens in new tab" title="Opens in new tab">
+                    <a target="_blank" href="https://git-scm.com/downloads" rel="noopener noreferrer">https://git-scm.com/downloads<sup>&nbsp;↗️</sup></a>
+                    </span>  
+                    <br/><small>Commands presented are tested on MacOS. If you are running <code>Windows OS</code>, Git Bash is recommended to ensure compatibility.</small>
+                </li>
+                <li>Install Zbctl<br/>
+                    <span aria-label="Opens in new tab" title="Opens in new tab">
+                    <code>sudo apt install npm</code>
+                    <br/>
+                    <code>sudo npm i -g zbctl</code>
+                    </span>  
+                    <br/><small>Windows OS steps may vary. Install npm first, followed by zbctl.</small>
                 </li>                
             </ul>
-            <small>It is important to install latest version to avoid any difficulty in executing the steps.</small>
+            <small>General: Recommend to install latest version to avoid any difficulty in executing the steps.</small>
         </section>
     </main>
     <script src="../scripts/app.js"></script>
