part 8 9 added. some edits to test the sample app.

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,8 @@
   <rect x="4" y="10" width="16" height="10" rx="2" stroke="#222" stroke-width="2" fill="none"/>
   <circle cx="12" cy="15" r="2" stroke="#222" stroke-width="2" fill="none"/>
 </svg></sup></a></li>
+                <li><a href="pages/Part8.html">Prometheus and Grafana</a></li>
+                <li><a href="pages/Part9.html">Before you leave...</a></li>
             </ul>
         </nav>
         <main id="main-content">
