--- a/src/pages/Part0.html
+++ b/src/pages/Part0.html
@@ -11,14 +11,29 @@
         <section>
             We are excited to bring you hands-on learning experience.
             <br/>
-            Each participant will have access to a dedicated configuration to deploy and install a running Camunda 8.7.4 from scratch.
-            <ul>
-                <li>Pre-requisites</li>
-                <li>Install Elastic</li>
-                <li>Camunda app install</li>
-                <li>Landing Page</li>
-                <li>Deploy sample app: Lead to Opportunity</li>
-            </ul>                
+            Each participant will have access to install a running Camunda 8.7.4 from scratch.
+        </section>
+        <p/>
+        <section>
+            <h3>Participant Onboarding</h3>
+            <p>
+                Each participant has a dedicated configuration pre-built in the GCP project.
+                <br/>Please follow the link to view the <code>participant-specific</code> instructions.
+            </p>
+            <div class="table-wrap">
+                <table class="student-table-wrap">
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Email</th>
+                            <th>Configuration Link</th>
+                        </tr>
+                    </thead>
+                    <tbody id="studentTable">
+                        <!-- Populated by app.js -->
+                    </tbody>
+                </table>
+            </div>
         </section>
     </main>    
     <script src="../scripts/app.js"></script>
