wapp link added

--- a/src/pages/Part0.html
+++ b/src/pages/Part0.html
@@ -11,7 +11,13 @@
         <section>
             We are excited to bring you hands-on learning experience.
             <br/>
-            Each participant will have access to install a running Camunda 8.7.4 from scratch.
+            Each participant will have access to install a functional Camunda 8.7.4 app from scratch.
+            <br/>
+            <h3>Need assistance?</h3>
+            If you have any questions, please join the <b>WhatsApp group "c8-labs"</b> <a href="https://chat.whatsapp.com/Ki3JH5mX4Yk1bX4y2YF6nE" target="_blank">https://chat.whatsapp.com/Ki3JH5mX4Yk1bX4y2YF6nE</a>
+            <p/>
+            Note: Only participants with a valid ticket are allowed to join the group.
+            <p/>
         </section>
         <p/>
         <section>
