some more prereq

--- a/src/pages/Part1.html
+++ b/src/pages/Part1.html
@@ -38,9 +38,14 @@
                     <a target="_blank" href="https://k8slens.dev" rel="noopener noreferrer">https://k8slens.dev<sup>&nbsp;↗️</sup></a>
                     </span>
                 </li>
-                <li>GCP Cloud SDK (gcloud CLI)<br/>
+                <li>GCP Cloud SDK (gcloud CLI) along with Python<br/>
                     <span aria-label="Opens in new tab" title="Opens in new tab">
                     <a target="_blank" href="https://cloud.google.com/sdk/docs/install" rel="noopener noreferrer">https://cloud.google.com/sdk/docs/install<sup>&nbsp;↗️</sup></a>
+                    </span>
+                    <span>
+<p/>Download URL for Python. Make sure python is added to the PATH variable.
+<br/>
+https://www.python.org/downloads/                        
                     </span>
                 </li>
                 <li>Docker Desktop app<br/> 
