--- a/src/pages/Part2.html
+++ b/src/pages/Part2.html
@@ -32,7 +32,13 @@
                 <div class="copy-block">
                     <p/>
                     Git clone using below command.<br/>                    
-                    <pre id="copy-text-2-1"><code>https://github.com/rchari-ml/c86-mini.git</code></pre>
+                    # Start from a home directory for c8-labs program
+                    <br>
+                    <pre id="copy-text-2-1"><code>
+git clone https://github.com/rchari-ml/c86-mini.git
+cd c86-mini
+git checkout c8-labs-swati 
+                    </code></pre>
                     <p/>
                     <button class="copy-btn" onclick="copyToClipboard('copy-text-2-1')">Copy</button>
                 </div>            
