minor edits based on anmol feedback

--- a/src/pages/Part1.html
+++ b/src/pages/Part1.html
@@ -26,6 +26,23 @@
             </ul>
             <h3>Dev tools</h3>
             <ul class="prereq-list">
+                <li>Helm<br/> 
+                    <span aria-label="Opens in new tab" title="Opens in new tab">
+                    <a target="_blank" href="https://helm.sh/docs/intro/install/" rel="noopener noreferrer">https://helm.sh/docs/intro/install/<sup>&nbsp;↗️</sup></a>
+                    </span>
+                    <br/>
+                    <span>
+<p/>
+Windows OS users
+<br/>
+<code>winget install Helm.Helm</code>
+<p/>
+Mac OS users
+<br/>
+<code>brew install helm</code>
+<p/>
+                    </span>
+                </li>
                 <li>
                     VS Code IDE<br/>
                     <span aria-label="Opens in new tab" title="Opens in new tab">
@@ -45,7 +62,7 @@
                     <span>
 <p/>Download URL for Python. Make sure python is added to the PATH variable.
 <br/>
-https://www.python.org/downloads/                        
+<a target="_blank" href="https://www.python.org/downloads/">https://www.python.org/downloads/<sup>&nbsp;↗️</sup></a>
                     </span>
                 </li>
                 <li>Docker Desktop app<br/> 
@@ -62,7 +79,7 @@ https://www.python.org/downloads/
                     <code>Prompt> echo $env:PROCESSOR_ARCHITECTURE    </code>
                     </span>    
                 </li>
-                <li>Java, Keytool and Openssl<br/> 
+                <li>Java 21, Keytool and Openssl<br/> 
                     <span aria-label="Opens in new tab" title="Opens in new tab">
                     <a target="_blank" href=https://www.youtube.com/watch?v=_5caCus3mFY" rel="noopener noreferrer">Youtube: JDK and Keytool install on Windows<sup>&nbsp;↗️</sup></a>
                     </span>
@@ -73,9 +90,13 @@ https://www.python.org/downloads/
 
                     <span>
 <p/>
+Download URL for OpenJDK 21 (includes keytool)
+<br/>
+<a target="_blank" href="https://www.oracle.com/in/java/technologies/downloads/#java21">Java 21<sup>&nbsp;↗️</sup></a>
+<p/>
 Download URL for OpenSSL
 <br/>
-https://github.com/openssl/openssl/wiki/Binaries
+<a target="_blank" href="https://github.com/openssl/openssl/wiki/Binaries">https://github.com/openssl/openssl/wiki/Binaries<sup>&nbsp;↗️</sup></a>
 <p/>
 Below are the specific versions or higher recommended for the program.                        
 <br/>
