lab exercise added

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,8 @@
   <circle cx="12" cy="15" r="2" stroke="#222" stroke-width="2" fill="none"/>
 </svg></sup></a></li>
                 <li><a href="pages/Part8.html">Prometheus and Grafana</a></li>
-                <li><a href="pages/Part9.html">Before you leave...</a></li>
+                <li><a href="pages/Part9.html">Lab Exercise</a></li>
+                <li><a href="pages/Part10.html">Before you leave...</a></li>
             </ul>
         </nav>
         <main id="main-content">
