Note added for open landing page

--- a/src/pages/Part3.html
+++ b/src/pages/Part3.html
@@ -37,6 +37,8 @@ envsubst '${UNAMESPACE}' < deploy-landing-page.yaml  | kubectl apply -f -
                 <pre id="copy-text-3-3"><code>https://$UNAMESPACE.makelabs.in</code></pre>
                 <p/>
                 <button class="copy-btn" onclick="copyToClipboard('copy-text-3-3')">Copy</button>
+                <p/>
+                Note: If the page is not accessible, you may continue with the next steps. You can test this after completing the Camunda app install. (before <i>Deploy sample app</i>)
             </div>            
         </section>
     </main>
