minor changes to ui

--- a/src/pages/Part0.html
+++ b/src/pages/Part0.html
@@ -14,9 +14,10 @@
             Each participant will have access to install a functional Camunda 8.7.4 app from scratch.
             <br/>
             <h3>Need assistance?</h3>
-            If you have any questions, please join the <b>WhatsApp group "c8-labs"</b> <a href="https://chat.whatsapp.com/Ki3JH5mX4Yk1bX4y2YF6nE" target="_blank">https://chat.whatsapp.com/Ki3JH5mX4Yk1bX4y2YF6nE</a>
-            <p/>
-            Note: Only participants with a valid ticket are allowed to join the group.
+            <img class="_afvz" alt="c8-labs" src="https://static.whatsapp.net/rsrc.php/yZ/r/JvsnINJ2CZv.svg"/>
+            <br/>
+            If you have any questions, please join the <b>WhatsApp group "c8-labs"</b><br/><a href="https://chat.whatsapp.com/Ki3JH5mX4Yk1bX4y2YF6nE" target="_blank">https://chat.whatsapp.com/Ki3JH5mX4Yk1bX4y2YF6nE</a>
+            <br/>
             <p/>
         </section>
         <p/>
@@ -25,6 +26,7 @@
             <p>
                 Each participant has a dedicated configuration pre-built in the GCP project.
                 <br/>Please follow the link to view the <code>participant-specific</code> instructions.
+                <br/>
             </p>
             <div class="table-wrap">
                 <table class="student-table-wrap">
