--- a/src/pages/Part2.html
+++ b/src/pages/Part2.html
@@ -24,8 +24,8 @@
             <p>
                 The scripts associated with this program are available in the GitHub repository.
                 <br/>
-                Let's open VS Code and clond the Git repository to your local system.
-                <br/>
+                Let's open VS Code and clone the Git repository to your local system.
+                <p/>
                 Select the branch <code>c8-labs-swati</code>.
             </p>
                 <div class="copy-block">
